
syntax = "proto3";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./store/storepb/cluster.proto

option go_package = "github.com/odit-bit/scarlett/store/storepb";

package protoc;

service Cluster {
    rpc Leader(LeaderRequest) returns (LeaderResponse) {};
    rpc Join(JoinRequest) returns (JoinResponse) {};
    rpc RemoveNode(RemoveRequest) returns (RemoveResponse) {};
}

message LeaderRequest {}

message LeaderResponse {
    string id = 1;
    string addr = 2;
}


message JoinRequest {
    string address = 1;
    string id = 2;
}

message JoinResponse {
    string msg = 1;
}


message RemoveRequest{
    string id = 1;
}
message RemoveResponse{
    string msg = 1;
}