syntax = "proto3";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./store/storepb/command.proto

option go_package = "github.com/odit-bit/scarlett/store/storepb";

package protoc;


service Storer {
    rpc Command(CmdRequest) returns (CmdResponse) {};
    rpc Query(QueryRequest) returns (QueryResponse) {};
}

enum Command_Type {
    Unknown = 0;
    Set = 1;
    Delete = 2;
}



message CmdRequest {
    bytes payload = 1;
}

message CmdRequestPayload {
    Command_Type cmd = 1;
    bytes key = 2;
    bytes value  = 3;
}

message CmdResponse {
    string msg = 1;
    string err = 2;
}



enum Query_type {
    Get = 0;
}

message QueryRequest{
    Query_type query = 1;
    repeated bytes args = 2;
}

message QueryResponse {
    bytes value = 1;
}


service Command {
    rpc Set(SetRequest) returns (SetResponse) {};
    rpc Delete(DeleteRequest) returns (DeleteResponse) {};
    rpc Get(GetRequest) returns (GetResponse) {};
}


message SetRequest {
    Command_Type cmd = 1;
    bytes key = 2;
    bytes value = 3;
}

message SetResponse {
    string message = 1;
}

message GetRequest {
    Query_type cmd = 1;
    bytes key = 2;
}

message GetResponse {
    bytes value = 2;
}

message DeleteRequest {
    Command_Type cmd = 1;
    bytes key = 2;
}

message DeleteResponse {
    string message = 1;
}